--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,10 @@
 .listContainer {
   padding: 0;
   list-style-type: none;
+  align-items: stretch;
+  flex-direction: column;
+  width: 95%;
+
 }
 
 .listItem {
@@ -42,4 +46,9 @@
   margin-left: 10px;
   font-weight: lighter;
   font-style: italic;
+}
+
+.listFlex{
+  display: flex;
+  justify-content: space-around;
 }
